--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webby",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Feature rich apache ang nginx container-ized server runner app.",
   "main": "src/index.js",
   "scripts": {
@@ -17,10 +17,24 @@
     "server",
     "docker"
   ],
-  "author": "Pixelable <nadairpro@gmai.com>",
+  "author": "Pixel <nadairpro@gmai.com>",
   "license": "BSD-3-Clause",
   "bugs": {
     "url": "https://github.com/pixelable/webby/issues"
   },
-  "homepage": "https://github.com/pixelable/webby#readme"
+  "homepage": "https://github.com/pixelable/webby#readme",
+  "dependencies": {
+    "chardet": "^1.3.0",
+    "cookie-parser": "^1.4.5",
+    "electron": "^12.0.4",
+    "express": "^4.17.1",
+    "file-type": "^16.3.0",
+    "fs": "0.0.1-security",
+    "http": "0.0.1-security",
+    "https": "^1.0.0",
+    "node-cmd": "^4.0.0",
+    "openssl": "^1.1.0",
+    "os": "^0.1.1",
+    "query-string": "^7.0.0"
+  }
 }
